--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -4,7 +4,12 @@
 
 -@categories.each do |category|
 
-    %h3= link_to category.name, category
-    %p
-    %a{:class => "btn btn-primary btn-large", :href => "categories/" + category.id.to_s} Więcej &raquo;
-    %br
+   %h3= link_to category.name, category
+   %p
+   -category.photos.order('created_at desc').limit('5').each do |photo|
+      %a{:href => '/photos/' + photo.id.to_s}= image_tag photo.picture.url(:small)
+   %p 
+   %a{:class => "btn btn-primary btn-large", :href => "categories/" + category.id.to_s} Więcej &raquo;
+   %br
+
+= will_paginate @category 
