--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,6 +25,9 @@
                 %a{:href => "/categories"} Strona główna
               %li
                 %a{:href => "/photos/new"} Dodaj zdjęcie
+              -if(true == true)  
+                %li
+                  %a{:href => "/categories/new"} Dodaj kategorie
               %li
                 %a{:href => "#"} O?
   %br
