--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -3,12 +3,22 @@
 
 %p
   %h2= @category.name
-  -@photos=@category.photos
-  
--@photos.each do |photo|
-  %a{:href => '/photos/' + photo.id.to_s}= image_tag photo.picture.url(:medium)
-  
+
+-if(true == true)  
+  = link_to 'Edytuj', edit_category_path(@category)  
+    
+
+-if(true == true)  
+  = link_to 'Usuń', @category, method: :delete, data: { confirm: 'Jesteś pewien?' }  
+%br   
+
+-if(@category.photos != nil)  
+  -@photos=@category.photos.order('created_at DESC')
+  -@i=0  
+  -@photos.each do |photo|
+    %a{:href => '/photos/' + photo.id.to_s}= image_tag photo.picture.url(:medium)
+    -@i+=1
+    -if(@i%5 == 0)
+      -@i=0;
+      %br
 %br  
-  
-= link_to 'Edit', edit_category_path(@category) |
-= link_to 'Back', categories_path
