Dokonczenie wyboru kategori, dodanie tagów
Obsługa tagów, początek tworzenie chmury tagów (poprawic .css'a).
Zamiana wszystkich .erb na .haml

--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -12,4 +12,4 @@
    %a{:class => "btn btn-primary btn-large", :href => "categories/" + category.id.to_s} Więcej &raquo;
    %br
 
-= will_paginate @category 
+= will_paginate @categories
