--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -43,6 +43,10 @@
               
         .span9
           .hero-unit
+           
+            .tag_cloud
+              -tag_cloud Photo.tag_counts, %w{s m l} do |tag, css_class|
+                = link_to tag.name, tag_path(tag.name), class: css_class
             
             = yield
             
