--- a/app/views/photos/_form.html.haml
+++ b/app/views/photos/_form.html.haml
@@ -27,10 +27,6 @@
       = f.text_area :description
   
    .field
-      = f.label :author, "Ma się wczytywać automatyczne - zalogowany użytkownik" 
-      = f.text_field :author
-  
-   .field
       = f.label :tag_list, "Tagi (oddzielone przecinkami)" 
       = f.text_field :tag_list
   
@@ -38,4 +34,4 @@
       = f.label "Ocena (defaultowo 1)"
    
    .actions
-      = f.submit
+      = f.submit "Dodaj zdjęcie"
