--- a/app/views/photos/index.html.haml
+++ b/app/views/photos/index.html.haml
@@ -1,5 +1,8 @@
 %h1 Listing photos
 
+%h1 Tu jeszcze trzeba całe to przerobic
+%h1 5 wierszy po 5 kolumn, na dole stronicowanie, pod kazdym zdjeciem widoczne usun (tylko dla admina)
+
 %table
   %tr
     %th Name
