Dodanie systemu ocen
Automatyczne zliczanie ilosci ocen. Poprawienie widoku (photos\index).

--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -6,12 +6,17 @@
   = link_to 'Usuń', @category, method: :delete, data: { confirm: 'Jesteś pewien?' }  
 %br   
 
--@photos=@category.photos.order('created_at DESC')
--@i=0  
--@photos.each do |photo|
-  %a{:href => '/photos/' + photo.id.to_s}= image_tag photo.picture.url(:medium)
-  -@i+=1
-  -if(@i%5 == 0)
-    -@i=0;
-    %br
+-@i=0 
+%table
+  %tr
+    -@photos_paginate.each do |photo|
+      %td
+        %a{:href => '/photos/' + photo.id.to_s}= image_tag photo.picture.url(:medium)
+        -@i+=1
+        -if(@i%5 == 0)
+          -@i=0;
+          %tr
+          %br
 %br  
+
+= will_paginate @photos_paginate
