--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,11 +31,10 @@
               %li 
                 %a{:href => "/categories"} Strona główna
               %li
-                %a{:href => "/photos/new"} Dodaj zdjęcie
-              -if(true == true)  
+                =link_to "Dodaj zdjęcie", new_photo_path
+              -if((current_user != nil) and (current_user.is_admin == true))
                 %li
-                  -if((current_user != nil) and (current_user.is_admin == true))
-                    %a{:href => "/categories/new"} Dodaj kategorie
+                  =link_to "Dodaj kategorie", new_category_path
               %li
                 %a{:href => "#"} O?
   %br
